@@ -137,7 +137,7 @@ bool FLineEdit::setFocus (bool on)
 bool FLineEdit::setShadow (bool on)
 {
   if ( on
-      && (Encoding != fc::VT100 || isTeraTerm() )
+      && Encoding != fc::VT100
       && Encoding != fc::ASCII )
   {
     flags |= fc::shadow;
