@@ -70,12 +70,7 @@ void FRadioButton::drawRadioButton()
     else
     {
       print ('(');
-
-      if ( isCygwinTerminal() )
-        print (0x04);
-      else
-        print (fc::Bullet);  // Bullet ●
-
+      print (fc::Bullet);  // Bullet ●
       print (')');
     }
   }
